--- a/src/styles/BeerBrowser.module.css
+++ b/src/styles/BeerBrowser.module.css
@@ -6,3 +6,19 @@ justify-content: space-between;
 flex-wrap: wrap;
 
 }
+
+.filtercontainer{
+    width: 100%;
+    display: flex
+}
+button{
+    margin-left: auto;
+    margin-right: auto;
+}
+.button_on{
+background-color: green;
+}
+
+.button_off{
+background-color: gray;
+}
